Fixed gap spacing for sticky note

--- a/src/app/styles/stickynote.scss
+++ b/src/app/styles/stickynote.scss
@@ -44,7 +44,7 @@
   justify-content: space-between;
   align-items: flex-start;
   align-content: flex-start;
-  row-gap: map-get($spacing, 250);
+  row-gap: map-get($spacing, 125);
   align-self: stretch;
   flex-wrap: wrap;
 }
